# advent_of_code_2025

./: .gitignore  Cargo.toml  README.md  aoc.cabal  cabal.project  hie.yaml
app/: Main.hs
src/: AOCSolution.hs  Common.hs  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Days.hs  Inputs.hs  day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  download_inputs.rs  lib.rs  main.rs
test/: Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs
