[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
itertools = "0.14.0"
memoize = "0.6.0"
nom = "8.0.0"
priority-queue = "2.7.0"
rayon = "1.11.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
scraper = "0.24"
