cabal-version:      3.6
name:               aoc2025
version:            0.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Tom Jemmett
maintainer:         thomas.jemmett@nhs.net

common shared-properties
    build-depends:
        aeson,
        array,
        bifunctors,
        bytestring,
        containers,
        directory,
        dotenv,
        fgl,
        hashable,
        http-client,
        lens,
        lens-aeson,
        mtl,
        parallel,
        parsec,
        pointedlist,
        primes,
        pqueue,
        search-algorithms,
        split,
        text,
        time,
        timeit,
        transformers,
        unordered-containers,
        utf8-string,
        vector,
        wreq,
        base ^>=4.17.2
    default-extensions:
        BangPatterns
        BlockArguments
        DataKinds
        FlexibleContexts
        FlexibleInstances
        ImportQualifiedPost
        LambdaCase
        MonadComprehensions
        MultiWayIf
        RecordWildCards
        TupleSections
        TypeApplications
        TypeOperators
        ViewPatterns
    default-language: Haskell2010

library
    import:           shared-properties
    exposed-modules:
        Days,
        Common,
        Inputs
    other-modules:
        Day01
        Day02
        Day03
        Day04
        Day05
        Day06
        Day07
        Day08
        Day09
        Day10
        Day11
        Day12
    hs-source-dirs:   src

executable aoc2025
    import:           shared-properties
    main-is:          Main.hs
    build-depends:
        aoc2025,
        http-client,
        http-client-tls,
        http-types
    hs-source-dirs:   app
    ghc-options: -threaded -rtsopts

test-suite spec
    import:           shared-properties
    type:             exitcode-stdio-1.0
    other-modules:
        Day01Spec
        Day02Spec
        Day03Spec
        Day04Spec
        Day05Spec
        Day06Spec
        Day07Spec
        Day08Spec
        Day09Spec
        Day10Spec
        Day11Spec
        Day12Spec
        SpecHelper
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        hspec >= 2.7,
        hspec-discover >= 2.7,
        aoc2025 >= 0.0.1
